--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -7,6 +7,7 @@ My Blog
 {% endblock %}
 
 {% block css_files %}
+<link rel="stylesheet" href="{% static 'blog/post.css' %}"/>
 <link rel="stylesheet" href="{% static 'blog/index.css' %}"/>
 {% endblock %}
 
@@ -40,28 +41,11 @@ My Blog
     </h2>
 
     <ul>
-        <li>
-            <article class="post">
-                <a href="">
-                    <img src="{% static 'blog/images/mountain.png' %}" alt="a"/>
-                    <div class="post__content">
-                        <h3>
-                            Mountain Hiking
-                        </h3>
-                        <p>
-                            There is nothing like hiking in the mountains. The fresh air, the beautiful scenery, the
-                            sense of accomplishment when you reach the summit. It is an experience like no other. I
-                            have been hiking in the mountains for many years and I never get tired of it. I love the
-                            challenge of climbing to the top of a mountain and the feeling of freedom that comes
-                            with it. I have hiked in many different mountains around the world and each one has its
-                            own unique beauty. I hope you will enjoy reading about my adventures in the mountains
-                            and that it will inspire you to get out and explore the great outdoors. </p>
 
 
-                    </div>
-                </a>
-            </article>
-        </li>
+        {% include "blog/includes/post.html" %}
+
+
     </ul>
 </section>
 
