HTML added for remaining APIs

--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 
 <li>
     <article class="post">
-        <a href="">
+        <a href="{% url 'post-detail-page' 'the-mountain' %}">
             <img src="{% static 'blog/images/mountain.png' %}" alt="a"/>
             <div class="post__content">
                 <h3>
