--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title%} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'app.css' %}">
-          {% block css_files %} {% endblock %}
+    {% block css_files %} {% endblock %}
 </head>
 <body>
+<header id="main-navigation">
+    <h1>
+        <a href="{% url 'starting-page' %}">Mitra's Blog</a></h1>
+    <nav>
+        <a href="{% url 'posts-page' %}">All Posts</a>
+    </nav>
+
+</header>
+
 {% block content %}
+
+
 {% endblock %}
 
 </body>
