dynamic html content & 404 status code handling added

--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -32,7 +32,9 @@ My Blog
     </h2>
 
     <ul>
+        {% for post in posts %}
         {% include "blog/includes/post.html" %}
+        {% endfor %}
     </ul>
 
 </section>
