--- a/my_site/blog/templates/blog/all-posts.html
+++ b/my_site/blog/templates/blog/all-posts.html
@@ -15,12 +15,9 @@ My Blog
 <section id="all-posts">
     <h2> My Collected Posts</h2>
     <ul>
+        {% for post in all_posts %}
         {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
-        {% include "blog/includes/post.html" %}
+        {% endfor %}
     </ul>
 </section>
 
