--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -12,9 +12,16 @@ This Post Title
 {% block content %}
 <section id="summary">
     <h2>{{ post.title }}</h2>
+    <div>
+        {% for tag in post_tags %}
+        <span class="tag">{{ tag.captions }}</span>
+        {% endfor %}
+    </div>
+
+
     <article>
-        <img src="{% static 'blog/images/'|add:post.image %}" alt="{{post.title}}"/>
-        <address> By {{ post.author|title }}</address>
+        <img src="{% static 'blog/images/'|add:post.image_name %}" alt="{{post.title}}"/>
+        <address> By <a href="mailto:{{ post.author.email }}"> {{ post.author }}</a> </address>
         <div>
             Last Updated on
             <time>{{ post.date|date:"M, d Y" }}</time>
