--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -10,6 +10,20 @@ This Post Title
 {% endblock %}
 
 {% block content %}
+
+{% if comment_form.errors %}
+<div id = "alert">
+    <h2>
+        Saving the comment failed!
+    </h2>
+    <p>
+        Please check the form and try again.
+    </p>
+    <a href="#comment-form">Fix!</a>
+</div>
+{% endif %}
+
+
 <section id="summary">
     <h2>{{ post.title }}</h2>
     <div>
@@ -19,9 +33,16 @@ This Post Title
     </div>
 
 
+    <div id = "read-later">
+        <button>
+            Read Later
+        </button>
+    </div>
+
+
     <article>
         <img src="{{ post.image.url }}" alt="{{post.title}}"/>
-        <address> By <a href="mailto:{{ post.author.email }}"> {{ post.author }}</a> </address>
+        <address> By <a href="mailto:{{ post.author.email }}"> {{ post.author }}</a></address>
         <div>
             Last Updated on
             <time>{{ post.date|date:"M, d Y" }}</time>
@@ -29,9 +50,37 @@ This Post Title
     </article>
 </section>
 
+
 <main>
     {{post.content|linebreaks}}
 </main>
+
+<section id="comments">
+    <ul>
+        {% for comment in post_comments %}
+        <li>
+            <h2> {{ comment.user_name }} </h2>
+                <p>{{ comment.text | linebreaks }}</p>
+
+        </li>
+        {% endfor %}
+    </ul>
+</section>
+
+<section id="comment-form">
+    <h2>Your Comment</h2>
+    <form action="{% url 'post-detail-page' post.slug %}" method="POST">
+        {% csrf_token %}
+        {% for form_field in comment_form %}
+        <div class="form-control" {% if form_field.errors %} invalid {% endif %}>
+            {{ form_field.label_tag }}
+            {{ form_field }}
+            {{ form_field.errors }}
+        </div>
+        {% endfor %}
+        <button>Save Comment</button>
+    </form>
+</section>
 
 
 {% endblock %}
