--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -14,6 +14,7 @@
         <a href="{% url 'starting-page' %}">Mitra's Blog</a></h1>
     <nav>
         <a href="{% url 'posts-page' %}">All Posts</a>
+         <a href="{% url 'read-later' %}">Stored Posts</a>
     </nav>
 
 </header>
